# device_board_lango

./: BUILD.gn  Kconfig.liteos_m.boards  Kconfig.liteos_m.defconfig.boards  Kconfig.liteos_m.shields  OAT.xml  README.en.md  README.md  README_ZH.md
dev_wifi_a/: BUILD.gn  Kconfig.liteos_m.board  Kconfig.liteos_m.defconfig.board  dev_wifi_a_defconfig  ohos.build
dev_wifi_a/hdf_drivers/: BUILD.gn
dev_wifi_a/hdf_drivers/gpio/: BUILD.gn
dev_wifi_a/hdf_drivers/uart/: BUILD.gn
dev_wifi_a/liteos_m/: BUILD.gn  config.gni
hcs/: BUILD.gn  asr582x.hcs  device_info.hcs  gpio.hcs  hdf.hcs  uart.hcs
shields/: BUILD.gn  Kconfig.liteos_m.shields
